--- a/.github/workflows/Docker-ci.yml
+++ b/.github/workflows/Docker-ci.yml
@@ -17,3 +17,18 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ${{ vars.DOCKER_USERNAME }}/ bere05
+
+
+
+ - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKER_USERNAME }} / bere05
+          password: ${{ secrets.DOCKER_PASSWORD }} 
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v6
+        with:
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          annotations: ${{ steps.meta.outputs.annotations }}
