--- a/.github/workflows/Docker-ci.yml
+++ b/.github/workflows/Docker-ci.yml
@@ -22,7 +22,7 @@ jobs:
       - name: tienda de discos musicales
         uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKER_USERNAME }} / bere05
+          username: ${{ vars.DOCKER_USERNAME }} 
           password: ${{ secrets.DOCKER_PASSWORD }} 
 
       - name: Build and push Docker image
@@ -31,3 +31,15 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           annotations: ${{ steps.meta.outputs.annotations }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v6
+        with:
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          annotations: ${{ steps.meta.outputs.annotations }}
+          provenance: true
+          sbom: true
