--- a/.github/workflows/Docker-ci.yml
+++ b/.github/workflows/Docker-ci.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image
+name: Build and Push Docker Image 
 
 on:
   push:
@@ -10,6 +10,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Start timer
+        id: start
+        run: echo "start=$(date +%s)" >> $GITHUB_OUTPUT
+
       - name: Checkout
         uses: actions/checkout@v4
 
@@ -29,36 +33,36 @@ jobs:
         uses: docker/setup-buildx-action@v3
       
       - name: Build and push Docker image
+        id: build
         uses: docker/build-push-action@v6
         with:
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          annotations: ${{ steps.meta.outputs.annotations }}
-          provenance: true
-          sbom: true
-
-
-      - name: tienda de discos musicales
-        uses: docker/login-action@v3
-        with:
-          username: ${{ vars.DOCKER_USERNAME }} 
-          password: ${{ secrets.DOCKER_PASSWORD }} 
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v6
-        with:
+          context: .
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           annotations: ${{ steps.meta.outputs.annotations }}
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v6
-        with:
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          annotations: ${{ steps.meta.outputs.annotations }}
-          provenance: true
-          sbom: true
+      # 📏 Métrica: Tamaño de la imagen
+      - name: Check image size
+        id: size
+        run: |
+          IMAGE=${{ steps.meta.outputs.tags }}
+          SIZE=$(docker images $IMAGE --format "{{.Size}}")
+          echo "Image size: $SIZE"
+          echo "size=$SIZE" >> $GITHUB_OUTPUT
+
+      # ⏱️ Métrica: Duración del build
+      - name: Calculate build time
+        id: time
+        run: |
+          END=$(date +%s)
+          START=${{ steps.start.outputs.start }}
+          DURATION=$((END - START))
+          echo "Build time: $DURATION seconds"
+          echo "duration=$DURATION" >> $GITHUB_OUTPUT
+
+      # 📊 Mostrar métricas en los logs
+      - name: Report metrics
+        run: |
+          echo "🚀 Docker Image: ${{ steps.meta.outputs.tags }}"
+          echo "📏 Image Size: ${{ steps.size.outputs.size }}"
+          echo "⏱️ Build Time: ${{ steps.time.outputs.duration }} seconds"
