--- a/.github/workflows/Docker-ci.yml
+++ b/.github/workflows/Docker-ci.yml
@@ -1,68 +1,46 @@
-name: Build and Push Docker Image 
+name: Docker CI con métricas
 
 on:
   push:
     branches:
       - main
-  pull_request:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Start timer
-        id: start
-        run: echo "start=$(date +%s)" >> $GITHUB_OUTPUT
+    - name: Checkout repo
+      uses: actions/checkout@v3
 
-      - name: Checkout
-        uses: actions/checkout@v4
+    - name: Build Docker image y calcular métricas
+      run: |
+        IMAGE_NAME=myapp:latest
+        echo "Iniciando build..."
+        START_TIME=$(date +%s)
+        docker build -t $IMAGE_NAME .
+        END_TIME=$(date +%s)
+        BUILD_TIME=$((END_TIME-START_TIME))
+        echo "Tiempo de build: $BUILD_TIME segundos"
 
-      - name: Extract Docker image metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ vars.DOCKER_USERNAME }}/bere05
+        # Tamaño de la imagen
+        IMAGE_SIZE=$(docker images $IMAGE_NAME --format "{{.Size}}")
+        echo "Tamaño de imagen: $IMAGE_SIZE"
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ vars.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+        # Número de layers
+        NUM_LAYERS=$(docker history $IMAGE_NAME --format "{{.ID}}" | wc -l)
+        echo "Número de layers: $NUM_LAYERS"
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      
-      - name: Build and push Docker image
-        id: build
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          annotations: ${{ steps.meta.outputs.annotations }}
+        # Guardar todo en metrics.txt
+        echo "Tiempo de build: $BUILD_TIME segundos" > metrics.txt
+        echo "Tamaño de imagen: $IMAGE_SIZE" >> metrics.txt
+        echo "Número de layers: $NUM_LAYERS" >> metrics.txt
 
-      # 📏 Métrica: Tamaño de la imagen
-      - name: Check image size
-        id: size
-        run: |
-          IMAGE=${{ steps.meta.outputs.tags }}
-          SIZE=$(docker images $IMAGE --format "{{.Size}}")
-          echo "Image size: $SIZE"
-          echo "size=$SIZE" >> $GITHUB_OUTPUT
+    - name: Upload metrics
+      uses: actions/upload-artifact@v3
+      with:
+        name: docker-metrics
+        path: metrics.txt
 
-      # ⏱️ Métrica: Duración del build
-      - name: Calculate build time
-        id: time
-        run: |
-          END=$(date +%s)
-          START=${{ steps.start.outputs.start }}
-          DURATION=$((END - START))
-          echo "Build time: $DURATION seconds"
-          echo "duration=$DURATION" >> $GITHUB_OUTPUT
-
-      # 📊 Mostrar métricas en los logs
-      - name: Report metrics
-        run: |
-          echo "🚀 Docker Image: ${{ steps.meta.outputs.tags }}"
-          echo "📏 Image Size: ${{ steps.size.outputs.size }}"
-          echo "⏱️ Build Time: ${{ steps.time.outputs.duration }} seconds"
+    - name: Mostrar métricas en logs
+      run: cat metrics.txt
